2017-07-15  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (libraryExists): Search module manager.
	This fixes GitLab issues #13 'locally defined library not found by
	cond-expand?'.

	* lang/Translator.java (reqrite): Follow aliased for scan-nesting.

	* standard/IfFeature.java (isProvide): Check for null name.

2017-06-08  Per Bothner  <per@bothner.com>

	* lang/Macro.java: Update for new position-range model.
	* lang/Translator.java: Likewise.
	* standard/fluid_let.java: Likewise.
	* lang/SyntaxForms.java (rewriteCar): New method.
	* standard/try_catch.java (write): Argument is now a Pair.

2017-05-14  Per Bothner  <per@bothner.com>

	* lang/Translator.java: Fix handling of nested ellipsis.
	Also optimize to not use redundant parameters.
	* standard/Scan.java (rewrite): Update accordingly.

2017-05-12  Per Bothner  <per@bothner.com>

	* lang/BindDecl.java: Fix scan pattern (ellipsis) with type specifier.

2017-04-19  Per Bothner  <per@bothner.com>

	* kawa/Record.java (makeRecordType): Update mangling to symbolic.
	Also set classfile-version.

2017-04-15  Per Bothner  <per@bothner.com>

	* lang/Lambda.java: Fix hygiene handling.
	(class LambdaBindDecls): New class, extends BindDecls.

	* lang/TemplateScope.java: Commented-out possible-future hygiene idea.
	Use alias symbols instead of alias declarations.

2017-03-21  Per Bothner  <per@bothner.com>

	* standard/expt.java: Moved to gnu.kawa.functions.Expt.

2017-03-20  Per Bothner  <per@bothner.com>

	* lang/Translator.java (resolveModule): Pop DeclSetMapper
	when handing pendingImports.
	* standard/require.java: Pass DeclSetMapper to pushPendingImport.

2017-03-10  Per Bothner  <per@bothner.com>

	* lang/SyntaxTemplate.java (get_var): Avoid exception on bad ellipsis.
	In the case of inconsistent ellipsis length, report an error
	rather than throwing a NullPointerException.

2017-03-01  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java: Fix computation of "current root".